[gd_scene load_steps=6 format=3 uid="uid://bqghbjjlvovh5"]

[ext_resource type="Script" path="res://entity/Card/Card.gd" id="1_q6dol"]
[ext_resource type="Texture2D" uid="uid://ce3idrd0yhvvq" path="res://sprites/card_up.svg" id="2_l5axy"]
[ext_resource type="Texture2D" uid="uid://ccraxvi8s7xtm" path="res://sprites/Suit/diamonds.png" id="3_trvxr"]
[ext_resource type="Texture2D" uid="uid://dnqh1ep4pj02a" path="res://sprites/card_hidden.svg" id="4_vg4ey"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mp0te"]
size = Vector2(181, 243)

[node name="Card" type="CenterContainer"]
layout_direction = 2
offset_right = 128.0
offset_bottom = 128.0
size_flags_horizontal = 4
script = ExtResource("1_q6dol")

[node name="Bg" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_l5axy")
stretch_mode = 2

[node name="TextureHolder" type="CenterContainer" parent="Bg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Bg/TextureHolder"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Bg/TextureHolder/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Bg/TextureHolder/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "-1"

[node name="SuitTexture" type="TextureRect" parent="Bg/TextureHolder/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_trvxr")

[node name="HBoxContainer" type="HBoxContainer" parent="Bg/TextureHolder/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Control" type="Control" parent="Bg/TextureHolder/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(23, 36)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="Bg/TextureHolder/VBoxContainer/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = 3.14159
pivot_offset = Vector2(12, 18)
theme_override_font_sizes/font_size = 30
text = "-1"
horizontal_alignment = 1

[node name="ReverseSide" type="TextureRect" parent="."]
visible = false
layout_mode = 2
texture = ExtResource("4_vg4ey")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(91.5, 121.5)
shape = SubResource("RectangleShape2D_mp0te")
